> Added a pic of the Earth next to the earth radio button.
> Fixed: Control panel Radio buttons should be aligned left.
> Fixed: The control panel boxes should expand to the width of the control panel.
> Removed the dialog box that explains the units.
> Added reset all button
> Ruler is always enabled in the Sun-Planet tab
# 0.01.08 (33237) Jul 11, 2009
> Increased font for text boxes
# 0.01.07 (33235) Jul 11, 2009
> Improved control panel text to indicate enlargement is per object, not for entire scale
> Increased font size on ruler
# 0.01.06 (33216) Jul 10, 2009
> Fixed: Planet size should be a function of mass
> reduced the range of the distance slider in the 2nd tab
# 0.01.05 (33213) Jul 10, 2009
> made the slider drag the sun instead of the planet
> added units controls and explanation
> added a link to My Solar System sim
> added scale control for magnified or actual size
# 0.01.04 (33175) Jul 8, 2009
> constrained drag to lie within play area
> added control panel to sun planet module
# 0.01.03 (33142) Jul 8, 2009
# 0.01.03 (33132) Jul 8, 2009
> added whitespace every 3 digits after the decimal place
> internationalized
> renamed cavendish-experiment to force-law-lab
# 0.01.02 (33086) Jul 6, 2009
> Use a space character to separate thousands for sun-planet system
> Increased font size for scale disclaimer on second panel
> Increased and bolded the ruler font, particularly for units
> Moved the ruler graphic in front of the wall graphic
> Fixed: The rulers should be longer at least as long as the white space
> Added a graphical display for the force on m2 by m1
# 0.01.01 (31358) May 5, 2009
> Added a sun-earth module.
# 0.01.00 (30589) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30588
> Show spring graphic in front of mass graphic
# 0.00.01 (30287) Apr 8, 2009
4/8/09 Initial version of Cavendish experiment