@@ -1,3 +1,8 @@
+> Custom checkbox becomes disabled when it's not selectable
+> Fixed: The two sliders are off set from each other.  Both should be centered.
+> Fixed: There should be a divider or box for the sliders
+> Put Earth/Custom radio buttons at the top.
+> Fixed: When I switch between kilometers and light minutes the control panel shifts over. 
 > Added a pic of the Earth next to the earth radio button.
 > Fixed: Control panel Radio buttons should be aligned left.
 > Fixed: The control panel boxes should expand to the width of the control panel.
